@@ -1,3 +1,8 @@
+Wed Jul 22 14:07:27 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java: New SHARP
+	attribute.
+
 Mon Jul 13 17:40:12 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/bora/xmldata/BoraToUnvConvert.java: New helper
